typescript/checker/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration7.ts.stderr
error: Unexpected token Some(Word(constructor))
 --> $DIR/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration7.ts:2:18
  |
2 |   public private constructor() { }
  |                  ^^^^^^^^^^^

